--- a/index.html
+++ b/index.html
@@ -1,148 +1,322 @@
 <!DOCTYPE html>
 
-<!--
-This is an HTML document. It contains information about how elements in the website
-are arranged. In other words, it describes the layout of a website.
+<!-- Cameron Pittman, Udacity Course Developer -->
 
-I can't wait to see the resumes you put together!
 
-Cameron Pittman, Udacity Course Developer
--->
-
-<!--
-The <head> of a website generally links to important resources the page will
-need to load. You'll see a lot of <link>s to CSS files for styles and
-<scripts> for JavaScript files to build interactions.
--->
 <html>
+
 <head>
-  <!-- This tells the browser how to read the document. -->
-  <meta charset="utf-8">
+    <meta charset="utf-8">
+    <title>Resume</title>
+    <link href="linkedin-to-json-resume/css/basic.css" rel="stylesheet">
+    <!-- <script src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBphjO_HMrXSQVZ-sDQ4hvJI0WOMTW8VV0"></script> -->
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <style type="text/css">
+        body,
+        div,
+        ul,
+        li,
+        p,
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            padding: 0;
+            margin: 0;
+            font-family: "Roboto", sans-serif;
+        }
 
-  <!-- Tells the browser what the title of this page should be. -->
-  <title>Resume</title>
+        .clear-fix {
+            overflow: auto;
+        }
 
-  <!-- Load the page styles. -->
-  <link href="css/style.css" rel="stylesheet">
+        .education-entry,
+        .work-entry,
+        .project-entry {
+            padding: 0 5%;
+        }
 
+        h1 {
+            font-size: 40px;
+            line-height: 48px;
+            display: inline;
+        }
 
+        h2 {
+            font-weight: bold;
+            font-size: 24px;
+            color: #999;
+            line-height: 29px;
+            padding: 10px;
+        }
 
-  <!--
-  Uncomment the <script> tag below when you're ready to add an interactive Google Map to your resume!
-  -->
-<!-- <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script> -->
+        h3 {
+            font-style: italic;
+            font-size: 20px;
+            color: #000;
+            line-height: 22px;
+        }
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+        h4 {
+            font-weight: bold;
+            font-size: 14px;
+            color: #4a4a4a;
+            line-height: 17px;
+        }
+
+        h2,
+        h3,
+        h4,
+        h5 {
+            padding: 10px 5%;
+        }
+
+        .date-text {
+            font-style: italic;
+            font-size: 14px;
+            color: #999;
+            line-height: 16px;
+            float: left;
+        }
+
+        .location-text {
+            font-style: italic;
+            font-size: 14px;
+            color: #999;
+            line-height: 16px;
+            float: right;
+        }
+
+        p {
+            font-size: 14px;
+            color: #333;
+            line-height: 21px;
+        }
+
+        a {
+            color: #1199c3;
+            text-decoration: none;
+            margin-top: 10px;
+        }
+
+        .welcome-message {
+            font-style: italic;
+            font-size: 18px;
+            color: #f3f3f3;
+            line-height: 28px;
+        }
+
+        #skills-h3 {
+            display: none;
+        }
+
+        .second-color-bg {
+            background-color: #f5ae23;
+        }
+
+        .second-color-text {
+            color: #f5ae23;
+        }
+
+        .white-text {
+            font-weight: bold;
+            color: #fff;
+        }
+
+        .block {
+            display: block;
+        }
+
+        .main-color {
+            background-color: #484848;
+        }
+
+        .gray {
+            background-color: #f3f3f3;
+            padding-bottom: 10px;
+            clear: both;
+        }
+        /* TODO: Replace with image later */
+
+        #main {
+            display: block;
+        }
+
+        input {
+            border: 2px;
+            //background: transparent;
+            outline: none;
+            width: 5%;
+            height: 2%;
+        }
+
+        .flex-box {
+            display: -webkit-flex;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            padding: 10px;
+        }
+
+        .flex-column {
+            display: flex;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            padding: 10px;
+        }
+
+        .center-content {
+            padding: 2.5% 5%;
+        }
+
+        #footer {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .role {
+            margin-top: auto;
+        }
+
+        ul {
+            list-style-type: none;
+        }
+
+        .biopic {
+            float: left;
+            padding: 10px;
+            width: 200px;
+            display: none;
+        }
+
+        img {
+            padding: 10px;
+            width: 100%;
+            max-width: 1024px;
+        }
+
+        span {
+            padding: 5px;
+        }
+
+        #lets-connect {
+            text-align: center;
+        }
+        /* Media queries to handle various device widths */
+
+        @media only screen and (max-width: 1024px) {
+            #lets-connect {
+                margin-top: 5%;
+            }
+        }
+
+        @media only screen and (max-width:900px) {
+            .biopic {
+                width: 175px;
+            }
+        }
+
+        @media only screen and (max-width: 750px) {
+            #lets-connect {
+                margin-top: 10%;
+            }
+            .biopic {
+                width: 150px;
+            }
+            .welcome-message {
+                display: none;
+            }
+        }
+
+        #map {
+            display: block;
+            height: 100%;
+            margin: 0 5%;
+        }
+
+        #mapDiv {
+            height: 70vh;
+            width: 100%;
+            padding-bottom: 5%;
+        }
+
+        @media only screen and (min-width: 750px) {
+            #skills-h3,
+            .biopic {
+                display: block;
+            }
+        }
+    </style>
+
 </head>
+
 <body>
-  <div id="main">
-    Hello world!   <!-- You'll be deleting this line in the course -->
+    <main class="measure">
+        <h1>LinkedIn to Json Résumé</h1>
+        <p>This is a small website that exports your LinkedIn profile to a <a href="http://jsonresume.org/">JSON Résumé</a>.</p>
+        <p>The source code is available <a href="https://github.com/JMPerez/linkedin-to-json-resume">on GitHub</a>.</p>
 
-    <!--
-    Everything from here to the <script> tag below is the skeleton of your
-    website. Your code will add information to each of the sections of the
-    resume below. You can pretty easily figure out what each section will
-    display by looking at the id or at what's written between the <h2> tags.
-    -->
-    <div id="header" class="center-content clear-fix">
-      <ul id="topContacts" class="flex-box"></ul>
+        <p>Due to <a href="https://github.com/JMPerez/linkedin-to-json-resume/issues/10">recent restrictions</a> added to the LinkedIn API, this web app can't ask for access to user's full profile. Thus, the best way is to export your data from LinkedIn
+            and import it in this tool.</p>
+
+        <h2>Instructions</h2>
+        <ol>
+            <li>Go to the <a href="https://www.linkedin.com/settings/data-export-page">Data Export Page</a> on LinkedIn and click on "Request archive".</li>
+            <li>You will get an email from LinkedIn confirming your request. You will need to wait up to 72 hours to get a link to download your data.</li>
+            <li>After some hours you will receive a link to download your archive. Click on it and save the zip file.</li>
+            <li>Drag and drop or select the file (its name should be something like LinkedInDataExport_XX-XX-XXXX.zip) in the area below:</li>
+        </ol>
+        <div>
+            <p id="filedrag" style="display: block;">
+                Drop a LinkedIn archive zip file or
+                <button class="button" id="select-file">select a file</button>.
+            </p>
+            <input type="file" id="fileselect" name="fileselect[]" class="">
+        </div>
+        <h2 id="result">Result</h2>
+        <pre><code id="output"></code></pre>
+        <button class="button download" style="display: none;">Download as html</button>
+    </main>
+    <div id="main">
+        <div id="header" class="center-content clear-fix main-color">
+            <div id="footer" class="main-color"></div>
+            <hr>
+            <ul id="topContacts" class="flex-box"></ul>
+        </div>
+        <div style="clear: both;"></div>
+        <div id="workExperience" class="gray">
+            <h2>Work Experience</h2>
+        </div>
+        <div id="projects">
+            <h2>Projects</h2>
+        </div>
+        <div id="education" class="gray">
+            <h2>Education</h2>
+        </div>
+        <!-- <div id="mapDiv"> -->
+        <!-- <h2>Where I've Lived and Worked</h2> -->
+        <!-- </div> -->
+        <div id="lets-connect" class="main-color">
+            <h2 class="second-color-bg center-text">Let's Connect</h2>
+            <ul id="footerContacts" class="flex-box">
+            </ul>
+        </div>
     </div>
-    <div style="clear: both;"></div>
-    <div id="workExperience" class="gray">
-      <h2>Work Experience</h2>
-    </div>
-    <div id="projects">
-      <h2>Projects</h2>
-    </div>
-    <div id="education" class="gray">
-      <h2>Education</h2>
-    </div>
-    <div id="mapDiv">
-      <h2>Where I've Lived and Worked</h2>
-    </div>
-    <div id="lets-connect" class="dark-gray">
-      <h2 class="orange center-text">Let's Connect</h2>
-        <ul id="footerContacts" class="flex-box">
-      </ul>
-    </div>
-  </div>
-
-  <!-- "HTML is loaded by the browser in the order it appears in the file. If the JavaScript is loaded first and it is supposed to affect the HTML below it, it might not work, as the JavaScript would be loaded before the HTML it is supposed to work on. Therefore, putting JavaScript near the bottom of the HTML page is often the best strategy."
-  https://developer.mozilla.org/en-US/Learn/Getting_started_with_the_web/JavaScript_basics -->
-
-   <!-- "Javascript assets, by default, tend to block any other parallel downloads from occurring. So, you can imagine if you have plenty of <script> tags in the head, calling on multiple external scripts will block the HTML from loading, thus greeting the user with a blank white screen, because no other content on your page will load until the JS files have completely loaded."
-    http://stackoverflow.com/questions/4396849/does-the-script-tag-position-in-html-affects-performance-of-the-webpage -->
-
-    <!--
-  jQuery is a common JavaScript library for reading and making changes to the
-  Document Object Model (DOM). The DOM is a tree that contains information
-  about what is actually visible on a website.
-
-  While HTML is a static document, the browser converts HTML to the
-  DOM and the DOM can change. In fact, JavaScript's power comes from
-  its ability to manipulate the DOM, which is essentially a JavaScript
-  object. When JavaScript makes something interesting happen on a
-  website, it's likely the action happened because JavaScript changed
-  the DOM. jQuery is fast and easy to use, but it doesn't do anything
-  you can't accomplish with vanilla (regular) JavaScript.
-  -->
-  <script src="js/jQuery.js"></script>
-
-  <!-- More on helper.js in the class -->
-  <script src="js/helper.js"></script>
-
-  <!--
-  The next line tells the browser where to download the JavaScript file you'll be
-  writing. In resumeBuilder.js, you'll be writing code that builds the resume
-  dynamically when this website, index.html, is opened.
-  -->
-  <script src="js/resumeBuilder.js"></script>
 
 
-  <!--
-  These scripts are written in JavaScript. You'll be breaking them down as part of
-  a quiz. Essentially, the next few lines are checking to see if you have not
-  changed each section of the resume. If you have not made any changes to a section
-  of the resume, then that part of the resume does not show up. More on this in the
-  course.
-  -->
+    <script src="js/jquery-3.1.0.min.js"></script>
+    <script src="js/helper.js"></script>
+    <script src="js/resumeBuilder.js"></script>
+    <script src="linkedin-to-json-resume/vendor/zip.js"></script>
+    <script src="linkedin-to-json-resume/dist/output.js"></script>
 
-  <script>
-    // Notice how all of a sudden there's JavaScript inside this HTML
-    // document? You can write JavaScript between <script> tags. At the end of your
-    // JavaScript, don't forget the closing script tag with the slash (/).
+    <script>
+        document.getElementById('main').style.display = 'none';
+    </script>
 
-
-    // Also, this is a JavaScript style comment. You can comment in JavaScript with:
-
-    //   two slashes for all following characters on a single line, or
-
-    /*
-        an opening and closing set of slash asterisks for block comments.
-    */
-
-
-    if(document.getElementsByClassName('flex-item').length === 0) {
-      document.getElementById('topContacts').style.display = 'none';
-    }
-    if(document.getElementsByTagName('h1').length === 0) {
-      document.getElementById('header').style.display = 'none';
-    }
-    if(document.getElementsByClassName('work-entry').length === 0) {
-      document.getElementById('workExperience').style.display = 'none';
-    }
-    if(document.getElementsByClassName('project-entry').length === 0) {
-      document.getElementById('projects').style.display = 'none';
-    }
-    if(document.getElementsByClassName('education-entry').length === 0) {
-      document.getElementById('education').style.display = 'none';
-    }
-    if(document.getElementsByClassName('flex-item').length === 0) {
-      document.getElementById('lets-connect').style.display = 'none';
-    }
-    if(document.getElementById('map') === null) {
-      document.getElementById('mapDiv').style.display = 'none';
-    }
-  </script>
 </body>
+
 </html>
